test_regress/t/t_clocking_bad3.out
%Error: t/t_clocking_bad3.v:12:11: Corresponding variable 'in' does not exist
   12 |     input in;
      |           ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_clocking_bad3.v:13:12: Corresponding variable 'out' does not exist
   13 |     output out;
      |            ^~~
%Error: t/t_clocking_bad3.v:16:12: Duplicate declaration of CLOCKING 'cb': 'cb'
   16 |   clocking cb @(posedge clk);
      |            ^~
        t/t_clocking_bad3.v:11:12: ... Location of original declaration
   11 |   clocking cb @(posedge clk);
      |            ^~
%Error: Exiting due to
